--- a/PA1.Rmd
+++ b/PA1.Rmd
@@ -1,6 +1,9 @@
 # Reproducible Research: Peer Assessment 1
 
 
+# Personal Activity Monitoring Analysis
+ _______________________________________
+ 
 ## Loading and preprocessing the data
 
 
